--- a/Main/SEToolbox/SEToolbox/Views/ControlCubeGrid.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/ControlCubeGrid.xaml
@@ -32,6 +32,12 @@
         </StackPanel>
         <ToolBarPanel Grid.Row="1" Grid.ColumnSpan="2" HorizontalAlignment="Stretch">
             <ToolBar>
+                <Button Command="{Binding OptimizeObjectCommand}" ToolTip="Only useful for enormous ships. Reorganises order of cubes within the file, to speed up loading time.">
+                    <StackPanel Orientation="Horizontal">
+                        <Image Width="16" Height="16" Source="{Binding Converter={StaticResource ResouceToImageConverter}, ConverterParameter=sort_descending}" Margin="0,0,2,0" />
+                        <AccessText>Optimize</AccessText>
+                    </StackPanel>
+                </Button>
                 <Button Command="{Binding RepairObjectCommand}">
                     <StackPanel Orientation="Horizontal">
                         <Image Width="16" Height="16" Source="{Binding Converter={StaticResource ResouceToImageConverter}, ConverterParameter=wrench}" Margin="0,0,2,0" />
