--- a/Main/SEToolbox/SEToolbox/Views/WindowExplorer.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/WindowExplorer.xaml
@@ -195,6 +195,7 @@
                                     <GridView>
                                         <!--<GridViewColumn Header="Name" DisplayMemberBinding="{Binding EntityId}"/>-->
                                         <GridViewColumn Header="Type" Width="100" DisplayMemberBinding="{Binding ClassType, Converter={StaticResource EnumToResouceConverter}}"/>
+                                        <GridViewColumn Header="Name" Width="50" DisplayMemberBinding="{Binding Name}"/>
                                         <GridViewColumn Header="Description" Width="150" DisplayMemberBinding="{Binding Description}"/>
                                         <GridViewColumn Header="Distance" Width="80" DisplayMemberBinding="{Binding PlayerDistance, Converter={StaticResource DistanceConverter}}"/>
                                     </GridView>
