--- a/Main/SEToolbox/SEToolbox/Views/ControlCubeGrid.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/ControlCubeGrid.xaml
@@ -62,7 +62,7 @@
                             <MenuItem Header="To Heavy Armor" Command="{Binding ConvertToHeavyArmorCommand}"/>
                             <MenuItem Header="To Light Armor" Command="{Binding ConvertToLightArmorCommand}"/>
                         </MenuItem>
-                        <MenuItem Header="Framework" Command="{Binding FrameworkCommand}" ToolTip="Does not work currently.">
+                        <MenuItem Header="Framework" Command="{Binding FrameworkCommand}">
                             <MenuItem Header="To Framework" Command="{Binding ConvertToFrameworkCommand}" ToolTip="Any constructed components are unconstructed."/>
                             <MenuItem Header="To Complete Structure" Command="{Binding ConvertToCompleteStructureCommand}" ToolTip="Any unconstructed components are constructed."/>
                         </MenuItem>
@@ -70,6 +70,11 @@
                             <MenuItem Header="To Station" Command="{Binding ConvertToStationCommand}" />
                             <MenuItem Header="To Ship" Command="{Binding ConvertToShipCommand}" />
                         </MenuItem>
+                        <MenuItem Header="Corner/Round Armor">
+                            <MenuItem Header="To Corner Armor" Command="{Binding ConvertToCornerArmorCommand}"/>
+                            <MenuItem Header="To Round Armor" Command="{Binding ConvertToRoundArmorCommand}"/>
+                        </MenuItem>
+                        <MenuItem Header="Ladder to Passage" Command="{Binding ConvertLadderToPassageCommand}"/>
                     </MenuItem>
                     <MenuItem Header="Mirror">
                         <MenuItem Header="Using predefined X/Y/Z Planes" Command="{Binding MirrorStructureByPlaneCommand}" ToolTip="Uses planes as defined on the ship/station within Space Engineers." />
