--- a/Main/SEToolbox/SEToolbox/Views/ControlCubeGrid.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/ControlCubeGrid.xaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:converters="clr-namespace:SEToolbox.Converters"
+             xmlns:props="clr-namespace:SEToolbox.Properties"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <UserControl.Resources>
@@ -16,6 +17,7 @@
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
@@ -86,18 +88,43 @@
         </ToolBarPanel>
         <Label Grid.Row="2" Content="Dampeners:"/>
         <CheckBox Grid.Row="2" Grid.Column="1" VerticalAlignment="Center" IsChecked="{Binding Dampeners, Mode=TwoWay}" />
-        <Label Grid.Row="3" Content="Piloted:"/>
+        <TextBox Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" IsReadOnly="True" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Auto" BorderThickness="0" Margin="2">
+            <TextBox.Text>
+                <MultiBinding StringFormat="{x:Static props:Resources.CubeDetail}" Mode="OneWay">
+                    <Binding Path="IsPiloted"/>
+                    <Binding Path="DamageCount" Mode="OneWay"/>
+                    <Binding Path="Speed" Mode="OneWay"/>
+                    <Binding Path="PlayerDistance"/>
+                    <Binding Path="Scale"/>
+                    <Binding Path="Size.Width"/>
+                    <Binding Path="Size.Height"/>
+                    <Binding Path="Size.Depth"/>
+                    <Binding Path="Mass" Mode="OneWay"/>
+                </MultiBinding>
+            </TextBox.Text>
+        </TextBox>
+        <!--<Label Grid.Row="3" Content="Piloted:"/>
         <TextBlock Grid.Row="3" Grid.Column="1" VerticalAlignment="Center" Text="{Binding IsPiloted}" />
-        <Label Grid.Row="4" Content="Size:"/>
-        <TextBlock Grid.Row="4" Grid.Column="1" VerticalAlignment="Center" Text="{Binding Size}" />
-        <Label Grid.Row="5" Content="Damage:"/>
-        <TextBlock Grid.Row="5" Grid.Column="1" VerticalAlignment="Center" Text="{Binding DamageCount}" />
-        <Label Grid.Row="6" Content="Speed:"/>
-        <TextBlock Grid.Row="6" Grid.Column="1" VerticalAlignment="Center" Text="{Binding Speed, StringFormat='{}{0:#,###0.000} m/s'}" />
-        <Label Grid.Row="7" Content="Mass:"/>
-        <TextBlock Grid.Row="7" Grid.Column="1" VerticalAlignment="Center" Text="{Binding Mass, StringFormat='{}{0:#,###0} Kg'}" />
-        <Label Grid.Row="8" Content="Distance:"/>
-        <TextBlock Grid.Row="8" Grid.Column="1" VerticalAlignment="Center" Text="{Binding PlayerDistance, StringFormat='{}{0:#,###0.0} m'}" />
-        <TextBox Grid.Row="9" Grid.ColumnSpan="2" IsReadOnly="True" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Auto" Text="{Binding Report}" />
+        <Label Grid.Row="4" Content="Damage:"/>
+        <TextBlock Grid.Row="4" Grid.Column="1" VerticalAlignment="Center" Text="{Binding DamageCount}" />
+        <Label Grid.Row="5" Content="Speed:"/>
+        <TextBlock Grid.Row="5" Grid.Column="1" VerticalAlignment="Center" Text="{Binding Speed, StringFormat='{}{0:#,###0.000} m/s'}" />
+        <Label Grid.Row="6" Content="Distance:"/>
+        <TextBlock Grid.Row="6" Grid.Column="1" VerticalAlignment="Center" Text="{Binding PlayerDistance, StringFormat='{}{0:#,###0.0} m'}" />
+        <Label Grid.Row="7" Content="Scale:"/>
+        <TextBlock Grid.Row="7" Grid.Column="1" VerticalAlignment="Center" Text="{Binding Scale, StringFormat='{}{0} blocks'}" />
+        <Label Grid.Row="8" Grid.Column="0" Content="Size:"/>
+        <TextBlock Grid.Row="8" Grid.Column="1" VerticalAlignment="Center">
+            <TextBlock.Text>
+                <MultiBinding StringFormat="{}{0}m × {1}m × {2}m">
+                    <Binding Path="Size.Width" />
+                    <Binding Path="Size.Height" />
+                    <Binding Path="Size.Depth" />
+                </MultiBinding>
+            </TextBlock.Text>
+        </TextBlock>
+        <Label Grid.Row="9" Content="Mass:"/>
+        <TextBlock Grid.Row="9" Grid.Column="1" VerticalAlignment="Center" Text="{Binding Mass, StringFormat='{}{0:#,###0} Kg'}" />-->
+        <TextBox Grid.Row="10" Grid.ColumnSpan="2" IsReadOnly="True" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Auto" Text="{Binding Report}" />
     </Grid>
 </UserControl>
