--- a/Main/SEToolbox/SEToolbox/Views/ControlVoxel.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/ControlVoxel.xaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:converters="clr-namespace:SEToolbox.Converters"
+             xmlns:props="clr-namespace:SEToolbox.Properties"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <UserControl.Resources>
@@ -22,6 +23,8 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
         <Label Grid.ColumnSpan="2">Asteroid</Label>
@@ -29,15 +32,39 @@
             <ToolBar>
             </ToolBar>
         </ToolBarPanel>-->
-        <Label Grid.Row="2" Grid.Column="0" Content="Filename"/>
+        <!--<Label Grid.Row="2" Grid.Column="0" Content="Filename"/>
         <TextBlock Grid.Row="2" Grid.Column="1" VerticalAlignment="Center" Text="{Binding Filename}"/>
         <Label Grid.Row="3" Grid.Column="0" Content="Bounding Size:"/>
         <TextBlock Grid.Row="3" Grid.Column="1" VerticalAlignment="Center" Text="{Binding Size}" />
         <Label Grid.Row="4" Grid.Column="0" Content="Size:"/>
-        <TextBlock Grid.Row="4" Grid.Column="1" VerticalAlignment="Center" Text="{Binding ContentSize}" />
-        <Label Grid.Row="5" Grid.Column="0" Content="VoxCells:"/>
-        <TextBlock Grid.Row="5" Grid.Column="1" VerticalAlignment="Center" Text="{Binding VoxCells, StringFormat={}{0:#,##0}}" />
-        <Label Grid.Row="6" Grid.Column="0" Content="Distance:"/>
-        <TextBlock Grid.Row="6" Grid.Column="1" VerticalAlignment="Center" Text="{Binding PlayerDistance, StringFormat='{}{0:#,###0.0} m'}" />
+        <TextBlock Grid.Row="4" Grid.Column="1" VerticalAlignment="Center">
+            <TextBlock.Text>
+                <MultiBinding StringFormat="{}{0}m × {1}m × {2}m">
+                    <Binding Path="ContentSize.Width" />
+                    <Binding Path="ContentSize.Height" />
+                    <Binding Path="ContentSize.Depth" />
+                </MultiBinding>
+            </TextBlock.Text>
+        </TextBlock>
+        <Label Grid.Row="5" Grid.Column="0" Content="Volume:"/>
+        <TextBlock Grid.Row="5" Grid.Column="1" VerticalAlignment="Center" Text="{Binding Volume, StringFormat={}{0:#,##0.00}m³}" />
+        <Label Grid.Row="6" Grid.Column="0" Content="VoxCells:"/>
+        <TextBlock Grid.Row="6" Grid.Column="1" VerticalAlignment="Center" Text="{Binding VoxCells, StringFormat={}{0:#,##0}}" />
+        <Label Grid.Row="7" Grid.Column="0" Content="Distance:"/>
+        <TextBlock Grid.Row="7" Grid.Column="1" VerticalAlignment="Center" Text="{Binding PlayerDistance, StringFormat='{}{0:#,###0.0} m'}" />-->
+        <TextBox Grid.Row="9" Grid.Column="0" Grid.ColumnSpan="2" IsReadOnly="True" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Auto" BorderThickness="0" Margin="2">
+            <TextBox.Text>
+                <MultiBinding StringFormat="{x:Static props:Resources.VoxelDetail}">
+                    <Binding Path="Filename"/>
+                    <Binding Path="Size"/>
+                    <Binding Path="ContentSize.Width"/>
+                    <Binding Path="ContentSize.Height"/>
+                    <Binding Path="ContentSize.Depth"/>
+                    <Binding Path="Volume" Mode="OneWay"/>
+                    <Binding Path="VoxCells"/>
+                    <Binding Path="PlayerDistance"/>
+                </MultiBinding>
+            </TextBox.Text>
+        </TextBox>
     </Grid>
 </UserControl>
