--- a/Main/SEToolbox/SEToolbox/Views/WindowExplorer.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/WindowExplorer.xaml
@@ -104,7 +104,7 @@
                     </MenuItem>
                     <MenuItem Header="View current Sandbox" Command="{Binding ViewSandboxCommand}">
                         <MenuItem.Icon>
-                            <Image Width="16" Height="16" />
+                            <Image Width="16" Height="16" Source="{Binding Converter={StaticResource ResouceToImageConverter}, ConverterParameter=document_view}" />
                         </MenuItem.Icon>
                     </MenuItem>
                     <MenuItem Header="Open Workshop" Command="{Binding OpenWorkshopCommand}">
