--- a/Main/SEToolbox/SEToolbox/Views/WindowImportModel.xaml
+++ b/Main/SEToolbox/SEToolbox/Views/WindowImportModel.xaml
@@ -1,12 +1,10 @@
 ﻿<Window x:Class="SEToolbox.Views.WindowImportModel"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
+        xmlns:helix="http://helixtoolkit.codeplex.com"
         xmlns:commands="clr-namespace:SEToolbox.Services"
         xmlns:converters="clr-namespace:SEToolbox.Converters"
         xmlns:controls="clr-namespace:SEToolbox.Controls"
-        xmlns:interop="clr-namespace:SEToolbox.Interop"
-        xmlns:ht="http://helixtoolkit.codeplex.com"
         ResizeMode="NoResize" ShowInTaskbar="False" WindowStartupLocation="CenterOwner" WindowStyle="ThreeDBorderWindow"
         Title="Import 3D Model" Height="400" Width="520" Icon="/SEToolbox;component/app.ico" Background="{StaticResource DialogBackgroundBrush}"
         commands:DialogService.IsRegisteredView="True"
@@ -66,11 +64,11 @@
                 <Label Content="Armor:" Grid.Row="3" />
                 <Grid Grid.Row="0" Grid.Column="2" Grid.RowSpan="4">
                     <Border BorderBrush="Black" BorderThickness="1">
-                        <ht:HelixViewport3D >
-                            <ht:DefaultLights/>
-                            <ht:CoordinateSystemVisual3D/>
+                        <helix:HelixViewport3D >
+                            <helix:DefaultLights/>
+                            <helix:CoordinateSystemVisual3D/>
                             <ModelVisual3D Content="{Binding Model}"/>
-                        </ht:HelixViewport3D>
+                        </helix:HelixViewport3D>
                     </Border>
                 </Grid>
                 <ComboBox Grid.Row="3" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Left" Width="200" ItemsSource="{Binding Source={StaticResource ArmorTypeEnum}}" SelectedValue="{Binding ArmorType}">
@@ -93,11 +91,11 @@
                                 <ColumnDefinition Width="65"/>
                             </Grid.ColumnDefinitions>
                             <TextBlock Text="Width:" Margin="0,0,0,0" />
-                            <TextBlock Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Center" Text="{Binding Path=OriginalModelSize.Width, StringFormat={}{0:#,##0.00}}" />
+                            <TextBlock Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Center" Text="{Binding Path=OriginalModelSize.Width, StringFormat='{}{0:#,##0.00}'}" />
                             <TextBlock Text="Height:" Margin="0,0,0,0" Grid.Row="1" />
-                            <TextBlock Grid.Column="1" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Center" Text="{Binding Path=OriginalModelSize.Height, StringFormat={}{0:#,##0.00}}" />
+                            <TextBlock Grid.Column="1" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Center" Text="{Binding Path=OriginalModelSize.Height, StringFormat='{}{0:#,##0.00}'}" />
                             <TextBlock Text="Depth:" Margin="0,0,0,0" Grid.Row="2" />
-                            <TextBlock Grid.Column="1" Grid.Row="2" HorizontalAlignment="Right" VerticalAlignment="Center" Text="{Binding Path=OriginalModelSize.Depth, StringFormat={}{0:#,##0.00}}" />
+                            <TextBlock Grid.Column="1" Grid.Row="2" HorizontalAlignment="Right" VerticalAlignment="Center" Text="{Binding Path=OriginalModelSize.Depth, StringFormat='{}{0:#,##0.00}'}" />
                         </Grid>
                     </GroupBox>
                     <GroupBox Header="Scale" MinWidth="120">
@@ -149,14 +147,14 @@
                             <TextBlock Grid.Column="1" Text="Blocks" HorizontalAlignment="Right" />
                             <TextBlock Grid.Column="2" Text="Meters" HorizontalAlignment="Right" />
                             <TextBlock Grid.Row="1" Text="Width:" Margin="0,0,0,0" VerticalAlignment="Center"/>
-                            <TextBlock Grid.Row="1" Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Center" Text="{Binding Path=NewModelSize.Width, StringFormat={}{0:#,##0}}" />
-                            <TextBlock Grid.Row="1" Grid.Column="2" HorizontalAlignment="Right" VerticalAlignment="Center" Text="{Binding Path=NewModelScale.X, StringFormat={}{0:#,##0.0}}" />
+                            <TextBlock Grid.Row="1" Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Center" Text="{Binding Path=NewModelSize.Width, StringFormat='{}{0:#,##0}'}" />
+                            <TextBlock Grid.Row="1" Grid.Column="2" HorizontalAlignment="Right" VerticalAlignment="Center" Text="{Binding Path=NewModelScale.X, StringFormat='{}{0:#,##0.0}'}" />
                             <TextBlock Grid.Row="2" Text="Height:" Margin="0,0,0,0" VerticalAlignment="Center" />
-                            <TextBlock Grid.Row="2" Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Center" Text="{Binding Path=NewModelSize.Height, StringFormat={}{0:#,##0}}" />
-                            <TextBlock Grid.Row="2" Grid.Column="2" HorizontalAlignment="Right" VerticalAlignment="Center" Text="{Binding Path=NewModelScale.Y, StringFormat={}{0:#,##0.0}}" />
+                            <TextBlock Grid.Row="2" Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Center" Text="{Binding Path=NewModelSize.Height, StringFormat='{}{0:#,##0}'}" />
+                            <TextBlock Grid.Row="2" Grid.Column="2" HorizontalAlignment="Right" VerticalAlignment="Center" Text="{Binding Path=NewModelScale.Y, StringFormat='{}{0:#,##0.0}'}" />
                             <TextBlock Grid.Row="3" Text="Depth:" Margin="0,0,0,0" VerticalAlignment="Center" />
-                            <TextBlock Grid.Row="3" Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Center" Text="{Binding Path=NewModelSize.Depth, StringFormat={}{0:#,##0}}" />
-                            <TextBlock Grid.Row="3" Grid.Column="2" HorizontalAlignment="Right" VerticalAlignment="Center" Text="{Binding Path=NewModelScale.Z, StringFormat={}{0:#,##0.0}}" />
+                            <TextBlock Grid.Row="3" Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Center" Text="{Binding Path=NewModelSize.Depth, StringFormat='{}{0:#,##0}'}" />
+                            <TextBlock Grid.Row="3" Grid.Column="2" HorizontalAlignment="Right" VerticalAlignment="Center" Text="{Binding Path=NewModelScale.Z, StringFormat='{}{0:#,##0.0}'}" />
                         </Grid>
                     </GroupBox>
                 </StackPanel>
